# cf_open_intramural_webapp

./: .gitignore  Dockerfile  README.md  backup.sh  compose.yaml  docker-compose-dev.yaml  docker-compose.yaml  example.env  index.html  logging.yaml  nginx_config.conf  package-lock.json  pyproject.toml  tailwind.config.js
app/: exceptions.py  main.py  settings.py  template.py  template_views.py  test.py  views.py
app/appreciation/: models.py  views.py
app/athlete/: models.py  service.py  views.py
app/athlete_prefs/: constants.py  schemas.py  service.py  views.py
app/attendance/: views.py
app/auth/: dependencies.py  exceptions.py  service.py  views.py
app/cf_games/: constants.py  schemas.py  service.py  views.py
app/database/: engine.py
app/score/: enums.py  models.py  service.py  views.py
app/ui/: template.py  views.py
nginx/: nginx old.conf  nginx.conf
scripts/: certbot-renew.sh
static/css/: output.css
static/js/: app.js
templates/: base.jinja2  leaderboard.jinja2  menu.jinja2  team_scores.jinja2
templates/pages/: 404.jinja2  appreciation.jinja2  assign_teams.jinja2  athlete_prefs.jinja2  athlete_scores.jinja2  attendance.jinja2  auto_team_assign.jinja2  home.jinja2  leaderboard.jinja2  login_form.jinja2  manual_team_assign.jinja2  rename_teams.jinja2  side_challenge_spirit.jinja2  side_scores.jinja2  team_members.jinja2  team_scores.jinja2
templates/partials/: admin_btn.jinja2  appreciation_table.jinja2  athlete_attendance_tbody.jinja2  athlete_attendance_td.jinja2  athlete_attendance_td_delete.jinja2  athlete_attendance_td_post.jinja2  (+18 more)
(+3 files in other folders)
