[project]
name = "cf-open-intramural-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "fastapi[standard]>=0.115.8",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.37",
]
